添加用户订单状态统计
